syntax = "proto3";
package proto;

option go_package = "github.com/daystram/audit/proto";


enum MessageCode {
  OK = 0;
  ERROR = 1;
}

enum ServiceType {
  HTTP = 0;
  TCP = 1;
  UDP = 2;
}

enum ServiceStatus {
  UNKNOWN = 0;
  UP = 1;
  UNREACHABLE = 2;
}

message TrackingMessage {
  MessageCode code = 1;
  oneof Body {
    TrackingRequest request = 2;
    TrackingResponse response = 3;
  }
}

message TrackingRequest {
  string application_id = 1;
  string service_id = 2;
  string endpoint = 3;
  ServiceType type = 4;
  string config = 5;
  int32 requestedAt = 6;
}

message TrackingResponse {
  string application_id = 1;
  string service_id = 2;
  ServiceStatus status = 3;
  int32 response_time = 4;
  int32 executedAt = 5;
}
